API token auth flow added, with docs!
